--- a/cloudFormation/02-server.yml
+++ b/cloudFormation/02-server.yml
@@ -1,16 +1,21 @@
-Description: cs-go-instance
+Description: EC2 & ASG setup for Counterstrike gaming server
 
 Parameters:
   # inject in the latest AMI
   Linux2Ami:
     Type: String
-  MyIpAddress:
+  # used to open up ssh port
+  myIpAddress:
     Type: String
   UserDataScript:
     Type: String
   SpotInstancePrice:
     Type: String
     Default: "0.030"
+  vpcName:
+    Type: String
+  zoneName:
+    Type: String
 
 Resources:
   CsLaunchConfig:
@@ -69,29 +74,25 @@ Resources:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIp: !Ref MyIpAddress
-      VpcId:
-        Fn::ImportValue: "cs-vpc"
+          CidrIp: !Ref myIpAddress
+      VpcId: !Ref zoneName
       Tags:
         - Key: Name
-          Value: cs-server-sg
+          Value: !Sub "${AWS::StackName}-sg"
 
   # toggle the min and max size to have instances deployed
-  BastionAutoScalingGroup:
+  CsServerAutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
       Cooldown: "60"
       HealthCheckGracePeriod: 10
       HealthCheckType: EC2
       LaunchConfigurationName: !Ref CsLaunchConfig
-      MaxSize: "0"
-      MinSize: "0"
+      MaxSize: "1"
+      MinSize: "1"
       Tags:
         - Key: Name
-          Value: CsAsg
+          Value: !Sub "${AWS::StackName}-ASG"
           PropagateAtLaunch: true
       VPCZoneIdentifier:
-        - Fn::ImportValue: "cs-public-a"
-
-  # SecurityGroups:
-  #   - Fn::ImportValue: !Sub ez-publish-02-${Environment}-security-groups-bastion-security-group
+        - !Ref vpcName
