--- a/cloudFormation/02-server.yml
+++ b/cloudFormation/02-server.yml
@@ -12,54 +12,12 @@ Parameters:
   SpotInstancePrice:
     Type: String
     Default: "0.030"
-  vpcName:
+  vpcId:
     Type: String
-  zoneName:
+  subnetId:
     Type: String
 
 Resources:
-  CsLaunchConfig:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Properties:
-      IamInstanceProfile: !Ref CsServerInstanceProfile
-      ImageId: !Ref Linux2Ami
-      InstanceMonitoring: false
-      InstanceType: c5.large
-      SpotPrice: !Ref SpotInstancePrice
-      SecurityGroups:
-        - CsServerSecurityGroup
-      UserData:
-        Fn::Base64: |
-          #!/bin/bash
-          echo "this worked " | tee -a /worked.txt
-      # UserData:
-      #   Fn::Base64: !Ref UserDataScript
-
-  # ec2 iam-instance-profile
-  CsServerInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: "/"
-      Roles:
-        - !Ref CsServerInstanceRole
-
-  # roles attached to instance-profile
-  CsServerInstanceRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - ec2.amazonaws.com
-              Action:
-                - sts:AssumeRole
-        Path: "/"
-        ManagedPolicyArns:
-          - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
-
   # which ports open on this box
   CsServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -75,24 +33,70 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: !Ref myIpAddress
-      VpcId: !Ref zoneName
+      VpcId: !Ref vpcId
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-sg"
+
+  CsLaunchConfig:
+    Type: AWS::AutoScaling::LaunchConfiguration
+    Properties:
+      # IamInstanceProfile: !Ref CsServerInstanceProfile
+      ImageId: !Ref Linux2Ami
+      InstanceMonitoring: false
+      InstanceType: c5.large
+      AssociatePublicIpAddress: true
+      SpotPrice: !Ref SpotInstancePrice
+      SecurityGroups: 
+        - !Ref CsServerSecurityGroup
+      # UserData:
+      #   Fn::Base64: |
+      #     #!/bin/bash
+      #     echo "this worked " | tee -a /worked.txt
+      UserData:
+        Fn::Base64: !Ref UserDataScript
+
+  # ec2 iam-instance-profile
+  # CsServerInstanceProfile:
+  #   Type: AWS::IAM::InstanceProfile
+  #   Properties:
+  #     Path: "/"
+  #     Roles:
+  #       - !Ref CsServerInstanceRole
+
+  # roles attached to instance-profile
+  # CsServerInstanceRole:
+  #     Type: AWS::IAM::Role
+  #     Properties:
+  #       AssumeRolePolicyDocument:
+  #         Version: "2012-10-17"
+  #         Statement:
+  #           - Effect: Allow
+  #             Principal:
+  #               Service:
+  #                 - ec2.amazonaws.com
+  #             Action:
+  #               - sts:AssumeRole
+  #       Path: "/"
+  #       ManagedPolicyArns:
+  #         - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
 
   # toggle the min and max size to have instances deployed
   CsServerAutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      Cooldown: "60"
+      AvailabilityZones: 
+        - eu-west-2a
       HealthCheckGracePeriod: 10
       HealthCheckType: EC2
       LaunchConfigurationName: !Ref CsLaunchConfig
       MaxSize: "1"
       MinSize: "1"
+      TerminationPolicies: 
+        - OldestInstance
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-ASG"
           PropagateAtLaunch: true
       VPCZoneIdentifier:
-        - !Ref vpcName
+        - !Ref subnetId
